--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3001
-MONGODB_URL=mongodb+srv://vladsiv:7IGYh6q26TOtVUMZ@ratatoskrdb.qm4mzzo.mongodb.net/?retryWrites=true&w=majority&appName=ratatoskrDB
+MONGODB_URL=mongodb+srv://vladsiv:7IGYh6q26TOtVUMZ@cluster0.j3mbpxt.mongodb.net/ratatoskrdb?retryWrites=true&w=majority&appName=Cluster0
